# ai-companion-response-learning

./: .gitignore  README.md
companions/black/: .env.example  README.md  kcbert_structure.txt  pyproject.toml
companions/black/docs/: advanced_architecture_ko.md  broadcast_dataset_examples_ko.md  current_status_report_ko.md  daily_conversation_dataset_ko.md  daily_intent_training_ko.md  daily_response_rewrite_workflow_ko.md  decision_trace_architecture_ko.md  development_report_ko.md  kobart_black_sft_guide_ko.md  korean_high_context_xai_progress_report_ko.md  policy_network_state_action_design_ko.md
companions/black/scripts/: analyze_v2_dataset.py  audit_black_draft_leaks.py  build_black_alt_question_benchmark_examples_20260422.py  build_black_broad_phrasing_rebuild_candidates_20260421.py  build_black_broad_phrasing_rebuild_seed_20260421.py  build_black_broad_question_benchmark_20260421.py  build_black_context_boundary_all_boundary_relation_source_pairs_v5.py  build_black_context_boundary_clean_surface_pairs_v2.py  build_black_context_boundary_data_preservation_rehearsal_v8.py  build_black_context_boundary_media_data_split_pairs_v6.py  build_black_context_boundary_relation_source_pairs_v4.py  build_black_context_boundary_social_earworm_rehearsal_v7.py  build_black_context_boundary_surface_pairs_v1.py  build_black_contextual_soak100_benchmark_20260422.py  build_black_daily_mix_frame_expansion_v1.py  build_black_deep_mix_frame_expansion_v1.py  build_black_draft_capability_inventory.py  build_black_draft_frame_calibration_v4.py  build_black_draft_frame_calibration_v5.py  (+157 more)
(+196 files in other folders)
