[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-discord-bot"
version = "0.1.0"
description = "예측/목표 중심 코어와 선택적 LLM 문장화 레이어를 가진 디스코드 봇 뼈대"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.5,<3",
  "httpx>=0.28,<0.29",
  "PyNaCl>=1.6,<2",
  "davey>=0.1.5,<1",
  "python-dotenv>=1.0,<2",
  "torch>=2.1,<3",
  "transformers>=4.48,<6",
]

[project.scripts]
predictive-bot = "predictive_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
